Add existing project files to Git

--- a/HTML/product.html
+++ b/HTML/product.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>wezapos</title>
 </head>
 <body>
+  <div id="product-container">
+<ul>
+  <h2>p</h2>
+</ul>
+  </div>
   <div id="products">
     <h2>Products</h2>
     <ul id="product-list"></ul>
@@ -27,5 +32,6 @@
       <button type="submit">Create Product</button>
     </form>
   </div>
+  <script src="../JS/createproduct.js"></script>
 </body>
 </html>
